--- a/ResNet_Cifar100.ipynb
+++ b/ResNet_Cifar100.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.cuda.set_device(1) #Select the GPU"
+    "torch.cuda.set_device(0) #Select the GPU"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -147,6 +147,7 @@
     "        out = self.layer3(out)\n",
     "        out = self.layer4(out)\n",
     "        out = F.avg_pool2d(out, 4)\n",
+    "        out = out.clip(max=0.4)\n",
     "        out = out.view(out.size(0), -1)\n",
     "        y = self.linear(out)\n",
     "        return y\n",
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -328,14 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.7834\n"
+      "Accuracy:  0.7704\n"
      ]
     }
    ],
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {
     "scrolled": true
    },
@@ -382,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: data/test_32x32.mat\n"
+      "Using downloaded and verified file: data\\test_32x32.mat\n"
      ]
     }
    ],
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,15 +467,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n",
-      "Done\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [100]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m batch \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msqueeze(torch\u001b[38;5;241m.\u001b[39mstack([x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m data_train[idx:idx\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m128\u001b[39m]]),dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mcuda()\n\u001b[0;32m      7\u001b[0m logits \u001b[38;5;241m=\u001b[39m torch_model(batch)\n\u001b[1;32m----> 8\u001b[0m confs \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msoftmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[0;32m      9\u001b[0m preds \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(confs,axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     10\u001b[0m logits \u001b[38;5;241m=\u001b[39m (logits\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mnumpy())\u001b[38;5;66;03m#**2)#.sum(axis=1)\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -522,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,41 +652,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 101,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b356f59735b74cccbf45df07cd7a9a50",
+       "model_id": "01e8f0e27e2b45caafcdb00aff3da471",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16234970aabe4b4daccf0dc1e74a0f79",
+       "model_id": "d21e6d7a076e4eed879658d35f4a3e1e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -692,7 +687,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "iSUN\n",
       "Done\n"
      ]
@@ -700,12 +694,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "326d25cb5b24408e870cd8d64513b538",
+       "model_id": "b7a197135846410cab3dc7b979025f14",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -715,9 +709,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 94.756 98.814 94.976 98.755 98.803\n",
+      " 94.278 98.673 94.695 98.714 98.214\n",
       "LSUN (R)\n",
       "Done\n"
      ]
@@ -725,12 +718,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cc2523b5d4b4d3cbecaa37e04ad9b2a",
+       "model_id": "25b32395c9944485885124eca611a28b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -740,9 +733,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 96.606 99.202 95.969 99.171 99.189\n",
+      " 95.961 98.974 95.523 98.991 98.577\n",
       "LSUN (C)\n",
       "Done\n"
      ]
@@ -750,12 +742,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5b3b69bc8a44dbebb3dcf663abb0fd0",
+       "model_id": "2c3c6b19120248938c2d4a916af6f481",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -765,9 +757,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 64.800 92.132 84.186 90.995 93.004\n",
+      " 70.344 94.068 86.637 93.677 94.228\n",
       "TinyImgNet (R)\n",
       "Done\n"
      ]
@@ -775,12 +766,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "837ccf6cbff94839b97117303d56ceb2",
+       "model_id": "0ba4e6673fc248178dd3b9eb7dba623a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -790,9 +781,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 94.789 98.898 94.960 98.771 98.956\n",
+      " 94.093 98.628 94.577 98.549 98.312\n",
       "TinyImgNet (C)\n",
       "Done\n"
      ]
@@ -800,12 +790,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5afe4ee2584e4c17bb24768b1419df3d",
+       "model_id": "75832f82b2f143f792d7c1367a1c64ac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -815,9 +805,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 88.478 97.661 92.167 97.392 97.891\n",
+      " 87.999 97.579 92.124 97.457 97.415\n",
       "SVHN\n",
       "Done\n"
      ]
@@ -825,12 +814,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77a2d847101143f187a8376fb47f8242",
+       "model_id": "c34986b8259e4acbbd6780d18b536329",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -840,9 +829,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 80.752 96.049 89.610 90.480 98.487\n",
+      " 87.843 97.420 92.117 93.969 98.880\n",
       "CIFAR-10\n",
       "Done\n"
      ]
@@ -850,12 +838,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7e39e3b74c44ca4b80409baddbe0207",
+       "model_id": "bdb8963ad627463598f051156e263828",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -865,9 +853,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 12.196 67.951 63.475 66.102 66.957\n"
+      " 10.562 67.523 63.505 66.480 65.537\n"
      ]
     }
    ],
@@ -914,7 +901,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -928,9 +915,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
