--- a/ResNet_SVHN.ipynb
+++ b/ResNet_SVHN.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -149,6 +149,7 @@
     "        out = self.layer3(out)\n",
     "        out = self.layer4(out)\n",
     "        out = F.avg_pool2d(out, 4)\n",
+    "        out = out.clip(max=0.1)\n",
     "        out = out.view(out.size(0), -1)\n",
     "        y = self.linear(out)\n",
     "        return y\n",
@@ -242,15 +243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: data/train_32x32.mat\n",
-      "Using downloaded and verified file: data/test_32x32.mat\n"
+      "Using downloaded and verified file: data\\train_32x32.mat\n",
+      "Using downloaded and verified file: data\\test_32x32.mat\n"
      ]
     }
    ],
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: data/train_32x32.mat\n"
+      "Using downloaded and verified file: data\\train_32x32.mat\n"
      ]
     }
    ],
@@ -308,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: data/test_32x32.mat\n"
+      "Using downloaded and verified file: data\\test_32x32.mat\n"
      ]
     }
    ],
@@ -328,14 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.9668484941610326\n"
+      "Accuracy:  0.9557467732022127\n"
      ]
     }
    ],
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -380,52 +381,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "isun = list(torch.utils.data.DataLoader(\n",
-    "    datasets.ImageFolder(\"iSUN/\",transform=transform_test),batch_size=1,shuffle=False))"
+    "#isun = list(torch.utils.data.DataLoader(\n",
+    "#    datasets.ImageFolder(\"iSUN/\",transform=transform_test),batch_size=1,shuffle=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lsun_c = list(torch.utils.data.DataLoader(\n",
-    "    datasets.ImageFolder(\"LSUN/\",transform=transform_test),batch_size=1,shuffle=True))"
+    "#lsun_c = list(torch.utils.data.DataLoader(\n",
+    "#    datasets.ImageFolder(\"LSUN/\",transform=transform_test),batch_size=1,shuffle=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lsun_r = list(torch.utils.data.DataLoader(\n",
-    "    datasets.ImageFolder(\"LSUN_resize/\",transform=transform_test),batch_size=1,shuffle=True))"
+    "#lsun_r = list(torch.utils.data.DataLoader(\n",
+    "#    datasets.ImageFolder(\"LSUN_resize/\",transform=transform_test),batch_size=1,shuffle=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tinyimagenet_c = list(torch.utils.data.DataLoader(\n",
-    "    datasets.ImageFolder(\"Imagenet/\",transform=transform_test),batch_size=1,shuffle=True))"
+    "#tinyimagenet_c = list(torch.utils.data.DataLoader(\n",
+    "#    datasets.ImageFolder(\"Imagenet/\",transform=transform_test),batch_size=1,shuffle=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tinyimagenet_r = list(torch.utils.data.DataLoader(\n",
-    "    datasets.ImageFolder(\"Imagenet_resize/\",transform=transform_test),batch_size=1,shuffle=True))"
+    "#tinyimagenet_r = list(torch.utils.data.DataLoader(\n",
+    "#    datasets.ImageFolder(\"Imagenet_resize/\",transform=transform_test),batch_size=1,shuffle=True))"
    ]
   },
   {
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,39 +640,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "973bca4a7644474685a068878c21aa61",
+       "model_id": "92f3e1795f8745c8b3da8c682275c235",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c037095b42c4ea5897065610bd9ad1d",
+       "model_id": "0bc9b8ea6bc44278b3346e3571244a1d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -681,132 +675,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "iSUN\n",
-      "Done\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60342b9ed1854718ab89229ffb69b6e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 99.444 99.766 98.113 99.911 99.337\n",
-      "LSUN (R)\n",
-      "Done\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00fe9a5a01bb4c5ebedb0c66cc732200",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 99.555 99.823 98.481 99.926 99.538\n",
-      "LSUN (C)\n",
-      "Done\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c5b88d59b6841edb2823e57bb5d77e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 94.191 98.739 94.669 99.430 97.383\n",
-      "TinyImgNet (R)\n",
-      "Done\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a25a7a21142b46688b86f890ddb076f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 99.280 99.725 97.860 99.885 99.297\n",
-      "TinyImgNet (C)\n",
-      "Done\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e6afbe421d4410eb4a52313ab2ce3bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 98.392 99.481 96.958 99.744 98.750\n",
       "CIFAR-10\n",
       "Done\n"
      ]
@@ -814,12 +682,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fb502a55bc044618cbd5647ae07cd8c",
+       "model_id": "ffc228b563f64fac85497e72b364481b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -829,9 +697,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " TNR    AUROC  DTACC  AUIN   AUOUT \n",
-      " 85.753 97.305 91.985 98.871 93.185\n"
+      " 77.999 95.983 89.661 98.307 90.092\n"
      ]
     }
    ],
@@ -852,26 +719,33 @@
     "\n",
     "detector.compute_test_deviations(POWERS=range(1,11))\n",
     "\n",
-    "print(\"iSUN\")\n",
-    "isun_results = detector.compute_ood_deviations(isun,POWERS=range(1,11))\n",
-    "print(\"LSUN (R)\")\n",
-    "lsunr_results = detector.compute_ood_deviations(lsun_r,POWERS=range(1,11))\n",
-    "print(\"LSUN (C)\")\n",
-    "lsunc_results = detector.compute_ood_deviations(lsun_c,POWERS=range(1,11))\n",
-    "print(\"TinyImgNet (R)\")\n",
-    "timr_results = detector.compute_ood_deviations(tinyimagenet_r,POWERS=range(1,11))\n",
-    "print(\"TinyImgNet (C)\")\n",
-    "timc_results = detector.compute_ood_deviations(tinyimagenet_c,POWERS=range(1,11))\n",
+    "#print(\"iSUN\")\n",
+    "#isun_results = detector.compute_ood_deviations(isun,POWERS=range(1,11))\n",
+    "#print(\"LSUN (R)\")\n",
+    "#lsunr_results = detector.compute_ood_deviations(lsun_r,POWERS=range(1,11))\n",
+    "#print(\"LSUN (C)\")\n",
+    "#lsunc_results = detector.compute_ood_deviations(lsun_c,POWERS=range(1,11))\n",
+    "#print(\"TinyImgNet (R)\")\n",
+    "#timr_results = detector.compute_ood_deviations(tinyimagenet_r,POWERS=range(1,11))\n",
+    "#print(\"TinyImgNet (C)\")\n",
+    "#timc_results = detector.compute_ood_deviations(tinyimagenet_c,POWERS=range(1,11))\n",
     "print(\"CIFAR-10\")\n",
     "c10_results = detector.compute_ood_deviations(cifar10,POWERS=range(1,11))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -883,9 +757,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
